# provider_simd_x86_64

./: Makefile  README.md  pyproject.toml
provider_simd_x86_64/: __init__.py  plugin.py
